--- a/https:/satoshi-ninja.github.io/css/style.css
+++ b/https:/satoshi-ninja.github.io/css/style.css
@@ -1,7 +1,3 @@
-#col-md-6 {
-	background: #5c4c7a;
-}
-
 @font-face {
   font-family: 'icomoon';
   src: url("../fonts/icomoon/icomoon.eot?srf3rx");
@@ -219,6 +215,9 @@ p {
   display: table-cell;
   width: 100%;
   vertical-align: middle;
+}
+#fh5co-home .fh5co-copy-inner .viola {
+	background: #5c4c7a;
 }
 #fh5co-home .fh5co-copy-inner h1, #fh5co-home .fh5co-copy-inner h2 {
   margin: 0;
